fix share trigger so it appears correctly on mobile devices

--- a/styleguide/source/assets/scss/02-molecules/_share.scss
+++ b/styleguide/source/assets/scss/02-molecules/_share.scss
@@ -9,10 +9,12 @@
   z-index: 5;
   opacity: 0;
   transition: all .25s ease-in;
+  border-radius: 2px;
 
   .joe__icon {
     height: 30px;
     width: 30px;
+    display: block;
   }
 
   svg {
